[gd_scene load_steps=8 format=3 uid="uid://cc7evrjjstpn1"]

[ext_resource type="Script" path="res://Scenes/Control.gd" id="1_m612p"]
[ext_resource type="Texture2D" uid="uid://cmslymmnugx2x" path="res://Scenes/cabin room.png" id="1_twwka"]
[ext_resource type="Texture2D" uid="uid://biepyio2v1od6" path="res://Scenes/arrow.png" id="2_c3qtk"]
[ext_resource type="Texture2D" uid="uid://bnisegno5uf6s" path="res://Button_Textures/EndCycle_Button.png" id="4_3ysvw"]
[ext_resource type="Texture2D" uid="uid://bamk1ij1a1uao" path="res://Scenes/Crafting Area.png" id="4_s8gdh"]
[ext_resource type="Texture2D" uid="uid://c3yjwpyapvx67" path="res://Scenes/event1.png" id="5_6cguh"]
[ext_resource type="PackedScene" uid="uid://dmojd3msv3ms0" path="res://EventManager/Event Handler.tscn" id="8_mmcy4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m612p")

[node name="CabinRoom" type="Sprite2D" parent="."]
scale = Vector2(0.601302, 0.6125)
texture = ExtResource("1_twwka")
metadata/_edit_lock_ = true

[node name="cam2d" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="Button_navigation_node_parent" type="Node2D" parent="cam2d"]
z_index = 1
position = Vector2(-567.5, 78.4998)
scale = Vector2(0.998006, 1)

[node name="LeftButton_UI" type="TextureButton" parent="cam2d/Button_navigation_node_parent"]
offset_right = 255.0
offset_bottom = 255.0
scale = Vector2(0.998006, 1)
texture_normal = ExtResource("2_c3qtk")
metadata/_edit_lock_ = true

[node name="RightButton_UI" type="TextureButton" parent="cam2d/Button_navigation_node_parent"]
offset_left = 1125.74
offset_top = 225.497
offset_right = 1380.74
offset_bottom = 480.497
rotation = -3.13541
scale = Vector2(0.998006, 1)
texture_normal = ExtResource("2_c3qtk")
metadata/_edit_lock_ = true

[node name="ClickCooldown" type="Timer" parent="cam2d/Button_navigation_node_parent"]
wait_time = 0.3

[node name="NextDay_Button" type="TextureButton" parent="cam2d/Button_navigation_node_parent"]
offset_left = -22.545
offset_top = -455.5
offset_right = 489.455
offset_bottom = 56.5001
scale = Vector2(0.517161, 0.470855)
texture_normal = ExtResource("4_3ysvw")

[node name="CraftingArea" type="Sprite2D" parent="."]
position = Vector2(-1216.38, -1.00002)
scale = Vector2(0.650651, 0.614815)
texture = ExtResource("4_s8gdh")

[node name="Event1" type="Sprite2D" parent="."]
position = Vector2(1187, -2)
scale = Vector2(0.603125, 0.615741)
texture = ExtResource("5_6cguh")

[node name="EventHandler" parent="." instance=ExtResource("8_mmcy4")]
position = Vector2(510, -352)
scale = Vector2(0.715464, 0.662831)

[connection signal="pressed" from="cam2d/Button_navigation_node_parent/LeftButton_UI" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="cam2d/Button_navigation_node_parent/RightButton_UI" to="." method="_on_right_button_ui_pressed"]
[connection signal="timeout" from="cam2d/Button_navigation_node_parent/ClickCooldown" to="." method="_on_click_cooldown_timeout"]
[connection signal="pressed" from="cam2d/Button_navigation_node_parent/NextDay_Button" to="." method="_on_next_day_button_pressed"]
